# copilot

./: TestTypes.hs
.github/workflows/: repo-ghc-8.6-cabal-2.4.yml
copilot/: README.md
copilot-bluespec/: CHANGELOG  README.md  copilot-bluespec.cabal
copilot-bluespec/src/Copilot/Compile/: Bluespec.hs
copilot-bluespec/src/Copilot/Compile/Bluespec/: CodeGen.hs  Compile.hs  Error.hs  External.hs  Settings.hs  Translate.hs  Util.hs
copilot-bluespec/src/Copilot/Core/: Extra.hs
copilot-c99/: copilot-c99.cabal
copilot-c99/src/Copilot/Compile/C99/: CodeGen.hs  Compile.hs  Expr.hs  External.hs  Name.hs  Translate.hs  Type.hs  Util.hs
copilot-c99/tests/Test/Copilot/Compile/: C99.hs
copilot-core/src/Copilot/Core/: Operators.hs  Type.hs
copilot-core/src/Copilot/Core/Type/: Array.hs
copilot-core/tests/Test/Copilot/Core/: Type.hs
copilot-core/tests/Test/Copilot/Core/Type/: Array.hs
copilot-interpreter/src/Copilot/Interpret/: Eval.hs
copilot-language/: copilot-language.cabal
copilot-language/src/Copilot/Language/: Reify.hs
copilot-language/src/Copilot/Language/Operators/: Array.hs
copilot-libraries/: copilot-libraries.cabal
copilot-prettyprinter/src/Copilot/: PrettyPrint.hs
copilot-theorem/: copilot-theorem.cabal
copilot-verifier/examples/: Dockerfile
copilot/examples/: SNL.hs  SNLAlt.hs  StateMachines.hs
workflows-copilot/: copilot
