cabal-version: >= 1.10
build-type:    Simple
name:          copilot-bluespec
version:       3.10
maintainer:    Ivan Perez <ivan.perezdominguez@nasa.gov>
author:        Ivan Perez
license:       BSD3
license-file:  LICENSE
homepage:      https://copilot-language.github.io
bug-reports:   https://github.com/Copilot-Language/copilot/issues
stability:     Experimental
category:      Language, Embedded
synopsis:      A compiler for Copilot targeting FPGAs.
description:
  This package is a back-end from Copilot to FPGAs in Bluespec.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell. Copilot contains an interpreter, multiple back-end compilers, and
  other verification tools.
  .
  A tutorial, examples, and other information are available at
  <https://copilot-language.github.io>.

extra-source-files: README.md
                  , CHANGELOG

x-curation: uncurated

source-repository head
  type:     git
  location: https://github.com/Copilot-Language/copilot.git
  subdir:   copilot-bluespec

library
  default-language:
    Haskell2010

  hs-source-dirs:
    src

  build-depends:
      base         >= 4.9 && < 5
    , directory    >= 1.3 && < 1.4
    , filepath     >= 1.4 && < 1.5
    , mtl          >= 2.2 && < 2.4

    , copilot-core >= 3.10  && < 3.11

  exposed-modules:
    Copilot.Compile.Bluespec

  other-modules:
      Copilot.Core.Extra
    , Copilot.Compile.Bluespec.CodeGen
    , Copilot.Compile.Bluespec.Compile
    , Copilot.Compile.Bluespec.Error
    , Copilot.Compile.Bluespec.External
    , Copilot.Compile.Bluespec.Settings
    , Copilot.Compile.Bluespec.Translate
    , Copilot.Compile.Bluespec.Util
